--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "React mediaplayer",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +28,17 @@
   "bugs": {
     "url": "https://github.com/ifahrentholz/rplay/issues"
   },
-  "homepage": "https://github.com/ifahrentholz/rplay#readme"
+  "homepage": "https://github.com/ifahrentholz/rplay#readme",
+  "devDependencies": {
+    "babel-core": "6.4.5",
+    "babel-loader": "6.2.1",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "webpack": "1.12.12",
+    "webpack-dev-server": "1.14.1"
+  },
+  "dependencies": {
+    "react": "0.14.6",
+    "react-dom": "0.14.6"
+  }
 }
